multi: add PrepareExtrenalAnchor RPC
